--- a/page11.html
+++ b/page11.html
@@ -13,16 +13,15 @@
 </style>
 </head>
 <body>
-  <main class="card" aria-labelledby="ttl">
-    <h1 id="ttl">연구 종료</h1>
-    <p>모든 절차가 완료되었습니다. 참여해 주셔서 대단히 감사합니다.</p>
-    <p>연락처로 디브리핑 및 보상 안내를 드리겠습니다.</p>
-    <p>평안한 하루 보내세요 :)</p>
-    <p class="muted" id="saveStatus">저장 중…</p>
-  </main>
+<main class="card" aria-labelledby="ttl">
+  <h1 id="ttl">연구 종료</h1>
+  <p>모든 절차가 완료되었습니다. 참여해 주셔서 대단히 감사합니다.</p>
+  <p>연락처로 디브리핑 및 보상 안내를 드리겠습니다.</p>
+  <p>평안한 하루 보내세요 :)</p>
+  <p class="muted" id="saveStatus">저장 중…</p>
+</main>
 
 <script type="module">
-/***** ▼ Firebase 초기 설정 ▼ *****/
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js";
 import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
 
@@ -38,20 +37,23 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
-/***** ▲ Firebase 설정 끝 ▲*/
 
 const PAGE = 11;
 const qs = new URLSearchParams(location.search);
 const pid = qs.get('pid') || localStorage.getItem('exp_pid') || '';
 const saveStatus = document.getElementById('saveStatus');
 
+/**
+ * Firestore에 answers 배열 형태로 저장
+ * @param {Array<{key:string,value:string}>} answers 
+ */
 async function saveToFirestore(answers){
-  if(!pid) return;
+  if(!pid) return false;
   try{
     await addDoc(collection(db, "responses"), {
       pid,
       page: PAGE,
-      answers,
+      answers,      // 배열 형태로 저장
       timestamp: new Date()
     });
     console.log("✅ Firestore 저장 완료 (page 11)");
@@ -62,12 +64,14 @@ async function saveToFirestore(answers){
   }
 }
 
+// 페이지 로드 시 완료 기록 저장
 async function finalize(){
-  const ok = await saveToFirestore([
+  const answers = [
     { key:'P10_COMPLETE', value:'1' },
     { key:'P10_MESSAGE', value:'연구 종료 안내 표시' },
     { key:'STUDY_STATUS', value:'complete' }
-  ]);
+  ];
+  const ok = await saveToFirestore(answers);
   saveStatus.textContent = ok ? '저장 완료' : '저장 실패(네트워크 확인 필요)';
 }
 
