--- a/page4.html
+++ b/page4.html
@@ -62,7 +62,8 @@ p.4
 <script type="module">
   /***** ▼ Firebase 초기 설정 ▼ *****/
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js";
-  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
+  import { getFirestore, collection, addDoc, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
+
 
   const firebaseConfig = {
     apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
@@ -157,20 +158,25 @@ p.4
     function refreshBtn(){ nextBtn.disabled = !answeredAll() || sending; }
 
     // ✅ Firestore 저장 함수
-    async function saveToFirestore(answers) {
-      try {
-        await addDoc(collection(db, "responses"), {
-          pid,
-          page: PAGE,
-          answers,
-          timestamp: new Date()
-        });
-        console.log("✅ Firestore 저장 완료 (page 4)");
-      } catch (e) {
-        console.error("❌ Firestore 저장 실패:", e);
-        throw e;
+    
+// ...
+
+async function saveToFirestore(answers) {
+  try {
+    const docRef = doc(db, "responses", pid);
+    await setDoc(docRef, {
+      [`page_${PAGE}`]: {
+        answers,
+        timestamp: serverTimestamp()
       }
-    }
+    }, { merge: true });
+    console.log(`✅ Firestore 저장 완료 (page ${PAGE})`);
+  } catch (e) {
+    console.error("❌ Firestore 저장 실패:", e);
+    throw e;
+  }
+}
+
 
     function collectAnswers() {
   const out = [];
