--- a/page5.html
+++ b/page5.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>소셜 미디어 연구_p4 </title>
+<title>소셜 미디어 연구_p5 </title>
 <style>
   :root{--bg:#ffffff;--line:#e5e7eb;--pri:#2563eb;--muted:#6b7280}
   *{box-sizing:border-box}
@@ -27,9 +26,8 @@
   </main>
 
 <script type="module">
-  /***** ▼ Firebase 초기 설정 ▼ *****/
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js";
-  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
+  import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
@@ -43,13 +41,9 @@
 
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
-  /***** ▲ Firebase 설정 끝 ▲ *****/
 
-
-  /***** ▼ 페이지 설정 ▼ *****/
   const PAGE = 5;
   const NEXT_PAGE_URL = "page6.html";
-  /***** ▲ 설정 끝 ▲ *****/
 
   (function(){
     const qs = new URLSearchParams(location.search);
@@ -57,37 +51,37 @@
     const go = document.getElementById('go');
     let sending = false;
 
-  // ✅ Firestore에 메타 데이터 저장 (배열 포함)
-async function sessionUpsert() {
-  try {
-    const answers = [
-      {
-        action: "read_post",
-        detail: "사용자에게 45초간 게시글 표시 안내",
-        value: null
+    async function saveToFirestore() {
+      try {
+        const answers = [
+          {
+            action: "read_post",
+            detail: "사용자에게 45초간 게시글 표시 안내",
+            value: null
+          }
+        ];
+
+        const docRef = doc(db, "responses", pid);
+        await setDoc(docRef, {
+          [`page_${PAGE}`]: {
+            answers,
+            timestamp: serverTimestamp()
+          }
+        }, { merge: true });
+
+        console.log(`✅ Firestore 저장 완료 (page ${PAGE})`);
+      } catch (e) {
+        console.error("❌ Firestore 저장 실패:", e);
+        throw e;
       }
-    ];
-
-    await addDoc(collection(db, "responses"), {
-      pid,
-      page: PAGE,
-      answers,        // 배열 형태로 저장
-      timestamp: new Date()
-    });
-
-    console.log("✅ Firestore 저장 완료 (page 5)");
-  } catch (e) {
-    console.error("❌ Firestore 저장 실패:", e);
-    throw e;
-  }
-}
+    }
 
     go.addEventListener('click', async ()=>{
       if (sending) return;
       sending = true;
       go.disabled = true;
       try {
-        await sessionUpsert();
+        await saveToFirestore();
         const next = `${NEXT_PAGE_URL}?pid=${encodeURIComponent(pid)}`;
         location.href = next;
       } catch(e) {
